refs #8394 , remove letter spacing for correct pdf generate

--- a/neticrm/esunbank/invoice.css
+++ b/neticrm/esunbank/invoice.css
@@ -17,7 +17,6 @@ p {
 }
 .bar .code {
   font-size: 13px;
-  letter-spacing: 5px;
   margin-left: 5px;
 }
 div.stamp {
